{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 67,
  "lineage": "8e30ebdf-974b-0b03-c509-f494a77256ba",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_challenge_1_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241014469979:internet-gateway/igw-02b8700037a85a4c3",
            "id": "igw-02b8700037a85a4c3",
            "owner_id": "241014469979",
            "tags": {
              "Name": "dev-challenge-1-igw"
            },
            "tags_all": {
              "Name": "dev-challenge-1-igw"
            },
            "vpc_id": "vpc-02ae13430fc706265"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_challenge_1_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_challenge_1_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241014469979:route-table/rtb-03c34faaf69c004e5",
            "id": "rtb-03c34faaf69c004e5",
            "owner_id": "241014469979",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b8700037a85a4c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-challenge-1-public-rt"
            },
            "tags_all": {
              "Name": "dev-challenge-1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ae13430fc706265"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_challenge_1_public_internet_gateway",
            "module.networking.aws_vpc.dev_challenge_1_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_challenge_1_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068e4faba6feeb1ee",
            "route_table_id": "rtb-03c34faaf69c004e5",
            "subnet_id": "subnet-04640e42d0dfa6d81"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_challenge_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_challenge_1_public_route_table",
            "module.networking.aws_subnet.dev_challenge_1_public_subnets",
            "module.networking.aws_vpc.dev_challenge_1_vpc_us_west_2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a04a119db1de868",
            "route_table_id": "rtb-03c34faaf69c004e5",
            "subnet_id": "subnet-0951c288a9ce7bed3"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_challenge_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_challenge_1_public_route_table",
            "module.networking.aws_subnet.dev_challenge_1_public_subnets",
            "module.networking.aws_vpc.dev_challenge_1_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_challenge_1_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241014469979:subnet/subnet-04640e42d0dfa6d81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04640e42d0dfa6d81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241014469979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-challenge-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-challenge-public-subnet-1"
            },
            "vpc_id": "vpc-02ae13430fc706265"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_challenge_1_vpc_us_west_2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241014469979:subnet/subnet-0951c288a9ce7bed3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0951c288a9ce7bed3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241014469979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-challenge-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-challenge-public-subnet-2"
            },
            "vpc_id": "vpc-02ae13430fc706265"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_challenge_1_vpc_us_west_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_challenge_1_vpc_us_west_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241014469979:vpc/vpc-02ae13430fc706265",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098f6072bf63489e7",
            "default_route_table_id": "rtb-09556aecc81bf269c",
            "default_security_group_id": "sg-0827589c8708ec1e6",
            "dhcp_options_id": "dopt-5185c029",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ae13430fc706265",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09556aecc81bf269c",
            "owner_id": "241014469979",
            "tags": {
              "Name": "dev-challenge-us-west-vpc-1"
            },
            "tags_all": {
              "Name": "dev-challenge-us-west-vpc-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241014469979:security-group/sg-0be40f1c88fd923ae",
            "description": "Enable the Port 9200(app)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be40f1c88fd923ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "SG for EC2 to enable APP(9200)",
            "name_prefix": "",
            "owner_id": "241014469979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow APP(9200)"
            },
            "tags_all": {
              "Name": "Security Groups to allow APP(9200)"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ae13430fc706265"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.dev_challenge_1_vpc_us_west_2"
          ]
        }
      ]
    }
  ]
}